# uap-bro

./: CMakeLists.txt  COPYING  README  README.md
scripts/: COPYING-regexes-yaml  __load__.bro  init.bro  types.bro  uap-utils.bro
src/: Plugin.cc  Plugin.h  UaParser.cpp  UaParser.h  types.bif  uap.bif
tests/: btest.cfg
tests/Baseline/uap.show-plugin/: output
tests/uap/: show-plugin.bro
